deploy/kubernetes/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: iskorotkov/web-todo:v1.0.0
          resources:
            limits:
              memory: "128Mi"
              cpu: "200m"
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    app: backend
  ports:
    - name: http
      port: 80
      targetPort: 80
