deploy/kubernetes/nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
  annotations:
    litmuschaos.io/chaos: "true"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
      annotations:
        litmuschaos.io/chaos: "true"
    spec:
      containers:
        - name: nginx
          image: nginx
          resources:
            limits:
              memory: "64Mi"
              cpu: "100m"
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/
              name: config
              readOnly: true
            - mountPath: /usr/share/nginx/html
              name: pages
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: nginx
            items:
              - key: default.conf
                path: default.conf
        - name: pages
          configMap:
            name: nginx
            items:
              - key: 50x.html
                path: 50x.html
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
