deploy/kubernetes/sqlserver.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlserver
  labels:
    app: sqlserver
spec:
  selector:
    matchLabels:
      app: sqlserver
  template:
    metadata:
      labels:
        app: sqlserver
    spec:
      terminationGracePeriodSeconds: 30
      hostname: mssqlinst
      securityContext:
        fsGroup: 10001
      containers:
        - name: sqlserver
          image: mcr.microsoft.com/mssql/server:2019-latest
          resources:
            limits:
              memory: "1500Mi"
              cpu: "500m"
          ports:
            - name: tcp
              containerPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: sqlserver
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    app: sqlserver
  ports:
    - name: tcp
      port: 1433
      targetPort: 1433
