deploy/kubernetes/istio-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: web-todo
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-todo
spec:
  hosts:
    - "*"
  gateways:
    - web-todo
  http:
    - route:
        - destination:
            host: nginx
            port:
              number: 80
