deploy/kubernetes/istio-services.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
spec:
  hosts:
    - backend
  http:
    - route:
        - destination:
            host: backend
      retries:
        attempts: 3
        perTryTimeout: 1000ms
        retryOn: 5xx
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sqlserver
spec:
  hosts:
    - sqlserver
  http:
    - route:
        - destination:
            host: sqlserver
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
spec:
  hosts:
    - nginx
  http:
    - route:
        - destination:
            host: nginx
